--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>foodchain</title>
     <link href="style.css" rel="stylesheet">
     <script src="scripts/lib/p5.min.js" defer></script>
+    <script src="scripts/utils.js" defer></script>
     <script src="scripts/entity.js" defer></script>
     <script src="scripts/entities.js" defer></script>
     <script src="scripts/sketch.js" defer></script>
