Added a very basic text input for mobile support (sim still not great to view on mobile)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="author" content="xithiox">
     <title>foodchain</title>
     <link href="style.css" rel="stylesheet">
+    <script src="scripts/lib/isMobile.min.js" defer></script>
     <script src="scripts/lib/p5.min.js" defer></script>
     <script src="scripts/utils.js" defer></script>
     <script src="scripts/entity.js" defer></script>
