--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
       <button onclick="selected='h'">Hive</button><br>
       <button onclick="selected='p'">Predator</button><br>
       <button onclick="selected='b'">Prey</button><br>
-      <button onclick="selected='s'">Swarm</button><br>
-      <button onclick="selected='t'">Turret</button>
+      <button onclick="selected='s'">Swarm</button>
     </div>
   </body>
 </html>
