Added key controls, onWander() method, and removed commented out turret and bullet entities

--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
     <button id="sidebar-toggle" onclick="toggleSidebar()">Controls</button>
     <div id="sidebar">
       <h1>General</h1>
-      <button onclick="initEntities()">Clear screen</button><br>
-      <button onclick="dispMode++;if(dispMode===2){chaseLines=true;fleeLines=true}if(dispMode>2){dispMode=0;chaseLines=false;fleeLines=false}">Cycle display mode</button><br>
-      <button onclick="motionBlur=!motionBlur">Toggle motion blur</button><br>
-      <button onclick="showChart=!showChart">Toggle species graph</button>
+      <button onclick="initEntities()">Clear screen (Enter)</button><br>
+      <button onclick="dispMode++;if(dispMode===2){chaseLines=true;fleeLines=true}if(dispMode>2){dispMode=0;chaseLines=false;fleeLines=false}">Cycle display mode (M)</button><br>
+      <button onclick="motionBlur=!motionBlur">Toggle motion blur (O)</button><br>
+      <button onclick="showChart=!showChart">Toggle species graph (G)</button>
 
       <h1>Display</h1>
-      <button onclick="fleeLines=!fleeLines">Toggle avoidance</button><br>
-      <button onclick="showNutrition=!showNutrition">Toggle nutrition</button><br>
-      <button onclick="showPerception=!showPerception">Toggle perception</button><br>
-      <button onclick="chaseLines=!chaseLines">Toggle targeting</button>
+      <button onclick="fleeLines=!fleeLines">Toggle avoidance (Alt)</button><br>
+      <button onclick="showNutrition=!showNutrition">Toggle nutrition (N)</button><br>
+      <button onclick="showPerception=!showPerception">Toggle perception (Ctrl)</button><br>
+      <button onclick="chaseLines=!chaseLines">Toggle targeting (Space)</button>
 
       <h1>Presets</h1>
-      <button onclick="if(currentPreset!==0){currentPreset=0;initEntities()}">Default</button><br>
-      <button onclick="if(currentPreset!==1){currentPreset=1;initEntities()}">Diverse</button><br>
-      <button onclick="if(currentPreset!==2){currentPreset=2;initEntities()}">Prey only</button>
+      <button onclick="if(currentPreset!==0){currentPreset=0;initEntities()}">Default (0)</button><br>
+      <button onclick="if(currentPreset!==1){currentPreset=1;initEntities()}">Diverse (1)</button><br>
+      <button onclick="if(currentPreset!==2){currentPreset=2;initEntities()}">Prey only (2)</button>
 
       <h1>Entities</h1>
-      <button onclick="selected='f'">Food</button><br>
-      <button onclick="selected='v'">Fungus</button><br>
-      <button onclick="selected='h'">Hive</button><br>
-      <button onclick="selected='p'">Predator</button><br>
-      <button onclick="selected='b'">Prey</button><br>
-      <button onclick="selected='s'">Swarm</button>
+      <button onclick="selected='f'">Food (f)</button><br>
+      <button onclick="selected='v'">Fungus (v)</button><br>
+      <button onclick="selected='h'">Hive (h)</button><br>
+      <button onclick="selected='p'">Predator (p)</button><br>
+      <button onclick="selected='b'">Prey (b)</button><br>
+      <button onclick="selected='s'">Swarm (s)</button>
     </div>
   </body>
 </html>
