--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="xithiox">
+    <meta name="author" content="Amelia Clarke">
     <title>foodchain</title>
     <link href="style.css" rel="stylesheet">
     <script src="scripts/lib/p5.min.js" defer></script>
